--- a/ProyectoAnalisis/ProyectoAnalisis/Maestra.Master
+++ b/ProyectoAnalisis/ProyectoAnalisis/Maestra.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Maestra.master.cs" Inherits="Practica4Bases1.Maestra" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Maestra.master.cs" Inherits="ProyectoAnalisis.Maestra" %>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -19,18 +19,12 @@
 		<div id="menu">
 			<ul>
 				<li><a href="Principal.aspx">Principal</a></li>
-				<li><a href="Clientes.aspx">Clientes</a></li>
-				<li><a href="Casos.aspx">Casos</a></li>
-				<li><a href="Documentos.aspx">Documentos</a></li>
-                <li><a href="Facturas.aspx">Facturas</a></li>
-                <li><a href="TipoCasos.apsx">Tipo de Casos</a></li>
-                <li><a href="Bitacora.aspx">Bitacora de Transacciones</a></li>
 			</ul>
 		</div>
 	</div>
 </div>
 <div id="logo" class="Row">
-	<h1>&nbsp;&nbsp;&nbsp; Abogados Virtual </h1>
+	<h1>Abogados Virtual </h1>
     <p>
          Camina de la mano de la Ley, y no tendrás Problemas!</p>
     </div>
